--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="https://www.facebook.com/profile.php?id=100029224752833"><i class="fa-brands fa-facebook"></i></a>
             <a href="https://www.instagram.com/vwnng.2612"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://www.tiktok.com/@vwnng2612"><i class="fa-brands fa-tiktok"></i></a>
-            <a href="https://github.com/vannam2612"><i class="fa-brands fa-github"></i></a>
+            <a href="https://vannam2612.github.io/demo-github/"><i class="fa-brands fa-github"></i></a>
         </div>
         <div class="footer" style="margin-top: 200px;">
             <p>Copyright 2023 Nguyen Van Nam. All rights reserved</p>
