--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="card">
         <div class="card__img"></div>
         <h3 >Văn Nam</h3>
-        <h4>keep avt to see more</h4>
+        <h4>keep to see more</h4>
         <div class="social">
             <a href="https://www.facebook.com/profile.php?id=100029224752833"><i class="fa-brands fa-facebook"></i></a>
             <a href="https://www.instagram.com/vwnng.2612"><i class="fa-brands fa-instagram"></i></a>
